# robot-collaboration

./: LICENSE  Makefile  README.md  move.sh  run_example.sh
src/irb1200_ros2_gazebo/config/: controller_manager.yaml
src/irb1200_ros2_gazebo/launch/: irb1200_simulation.launch.py
src/irb1200_ros2_gazebo/urdf/: irb1200.urdf.xacro
src/irb120_ros2_gazebo/launch/: irb120_simulation.launch.py
src/irb120_ros2_gazebo/urdf/: irb120.urdf.xacro
src/irb120_ros2_gazebo/worlds/: irb120.world
src/irb120_ros2_moveit2/launch/: irb120_interface.launch.py
src/join_plugin/: CMakeLists.txt  package.xml
src/join_plugin/include/join_plugin/: join_plugin.hpp  visibility_control.h
src/join_plugin/src/: join_plugin.cpp
src/plugin_client/: CMakeLists.txt
src/plugin_client/src/: plugin_client.cpp
src/polygon_base/: package.xml
src/polygon_plugins/: CMakeLists.txt  package.xml
src/polygon_plugins/src/: polygon_plugins.cpp
src/ros2_execution/programs/: example.txt  example_reverse.txt
src/ros2_execution/scripts/: ros2_execution.py
src/ros2_grasping/scripts/: attacher_action.py
src/ros2_grasping/urdf/: box.urdf
src/simulation/config/: controller_manager.yaml  ekf.yaml
src/simulation/launch/: actions.py  pippo.launch.py  robot.launch.py
src/simulation/rviz/: simulation.rviz
src/simulation/urdf/: pippo.urdf  robot.urdf
src/simulation/worlds/: empty.sdf
